# TremorGuard

./: .gitignore  AGENTS.md  CODE_WIKI.md  README.md  docker-compose.yml  requirements.txt  vercel.json  个性化康复训练智能指导系统开发计划.md
tremor-guard-backend/: .env.example  Dockerfile  README.md  alembic_clinical.ini  alembic_identity.ini  clinical.db  identity.db  openapi.json  pyproject.toml
tremor-guard-backend/alembic/clinical/: env.py
tremor-guard-backend/alembic/clinical/versions/: 20260405_000001_initial_clinical.py  20260405_000002_device_binding_onboarding.py  20260412_000003_medical_records.py  20260415_000004_rehab_guidance.py  (+1 more)
tremor-guard-backend/alembic/identity/: env.py
tremor-guard-backend/app/: __init__.py  main.py
tremor-guard-backend/app/api/: deps.py
tremor-guard-backend/app/core/: config.py  security.py
tremor-guard-backend/app/db/: base.py  session.py
tremor-guard-backend/app/models/: __init__.py  clinical.py  identity.py
tremor-guard-backend/app/schemas/: auth.py  domain.py
tremor-guard-backend/app/scripts/: export_openapi.py  generate_sample_health_report_pdf.py  reprocess_health_reports.py  run_migrations.py  seed.py
tremor-guard-backend/app/services/: agent_router.py  ai_chat.py  audit.py  dashboard.py  dashscope_client.py  health_report_analytics.py  markdown_pdf.py  medical_records.py  rehab_guidance.py  report_agent.py  seeds.py  user_management.py
tremor-guard-backend/app/tests/: conftest.py  test_api.py  test_rehab_guidance.py
tremor-guard-backend/tremor_guard_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+97 files in other folders)
